service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: gitops-app
spec:
  type: ClusterIP
  selector:
    app: demo-app  # <--- CERTIFIQUE-SE QUE ESTE NOME ESTÁ IGUAL NO DEPLOYMENT
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
